--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "next": "13.5.6",
     "peerjs": "^1.5.2",
     "postcss-nesting": "^12.0.4",
-    "socket.io": "^4.7.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-player": "^2.15.1",
+    "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
   },
