--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.354.0",
     "next": "13.5.6",
     "peerjs": "^1.5.2",
     "postcss-nesting": "^12.0.4",
-    "react": "^18",
+    "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-player": "^2.15.1",
     "socket.io": "^4.7.4",
